test/features/errors/semantic/e1059_invalid_implicit_dereference.spl
# E1059: Invalid Implicit Dereference

Feature: E1059 - Cannot Implicitly Dereference Type
  As a Simple compiler
  I want to detect when types cannot be implicitly dereferenced
  So that explicit dereference is used where needed

  Background:
    Given I have the Simple compiler

  Scenario: Cannot auto-dereference
    When I compile:
      '''
      struct Wrapper:
        value: i32

      fn test():
        val w = Wrapper { value: 42 }
        val x = w + 1  # Error: cannot auto-dereference Wrapper
      '''
    Then I should see error E1059 at line 6
    And the error message should be "cannot implicitly dereference type `{type}`"
    And the label should indicate "cannot auto-dereference"
    And the help should suggest "use explicit dereference operator `*`"

  Scenario: Valid explicit dereference
    When I compile:
      '''
      fn test():
        val x = 42
        val ptr = &x
        val y = *ptr + 1  # OK: explicit dereference
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Wrapper:
        value: i32

      fn test():
        val w = Wrapper { value: 42 }
        val x = w + 1
      '''
    Then I should see error E1059
    And the error message should contain "암시적 역참조 불가"
